<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="ng.com.tinweb.www.autobudget.MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/textColorFaint"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/piggy_bank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_catch_phrase"
            android:textColor="@color/textColorFaint"
            android:textStyle="italic" />

        <Button
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_screen_button" />

    </RelativeLayout>

</layout>


